2008-11-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/Ambience.cs:
	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs:
	* MonoDevelop.Projects.Dom.Output/OutputSettings.cs: Worked on
	ambiences.

2008-11-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom.Output/AmbienceService.cs: Add property for
	getting default ambience directly.

2008-11-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom.Output/DocumentationService.cs: Stub for
	upcoming doc service.

	* MonoDevelop.Projects.Dom.Output/Ambience.cs: Ambience should not claim
	it's valid for all filenames. More efficient & thourough string
	escaping. Remove unused code.

	* Makefile.am:
	* MonoDevelop.Projects.mdp: Updated.

2008-11-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/DomProperty.cs:
	* MonoDevelop.Projects.Dom.Output/Ambience.cs:
	* MonoDevelop.Projects.Dom/DomCecilProperty.cs: Worked on ambiences/dom
	output.

2008-11-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/Ambience.cs: fixed ambience modifier
	outputs too many spaces.

2008-11-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/Ambience.cs: ambience strings now can
	be post processed.

2008-11-24  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	Temporary workaround for Bug 447811 - ProjectTypeGuids are erased
	from MSBuild files.

2008-11-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/CompoundType.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs: Bug 447636 - Code
	completion window throws exception, then never opens again

2008-11-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Fix
	spelling.

2008-11-21  Mike Krüger  <mkrueger@novell.com>
