@@ -1,6 +1,12 @@
 2008-11-27  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Dom.Output/Ambience.cs:
+	* MonoDevelop.Projects.Dom.Output/OutputSettings.cs: Changed postprocess
+	synopsis.
+
+2008-11-27  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Projects.Dom.Output/Ambience.cs:
 	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs:
 	* MonoDevelop.Projects.Dom.Output/OutputSettings.cs: Worked on
 	ambiences.
